# Frasy

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .gitmodules.swp  .lua-format  .luarc.json  .readthedocs.yaml  CMakeLists.txt  README.md  compile_options.cmake  generate_demo_mode.ps1  premake5.lua  requirements.txt  sync_assets.cmake
Brigerad/: CMakeLists.txt
Brigerad/src/: Brigerad.h
Brigerad/src/Brigerad/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  File.cpp  File.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Memory.cpp  Memory.h  MouseButtonCodes.h  Thread.cpp  Thread.h  Time.h  Timestep.h  Types.h  Window.h
Brigerad/src/Brigerad/Debug/: Instrumentor.h
Brigerad/src/Brigerad/Events/: ApplicationEvent.h  Event.h  ImGuiEvents.h  KeyEvents.h  MouseEvent.h  usb_event.h
Brigerad/src/Brigerad/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Brigerad/src/Brigerad/Renderer/: Buffer.cpp  Buffer.h  Camera.h  FontAtlas.cpp  FontAtlas.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  asset_manager.h  font.h  gif.cpp  gif.h
Brigerad/src/Brigerad/Scene/: Components.h  Entity.cpp  Entity.h  ImGuiButtonComponents.h  ImGuiTextComponents.h  ImGuiWindowComponents.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneDesirializer.cpp  SceneDesirializer.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h  YamlConverters.h
Brigerad/src/Brigerad/Script/: ScriptEngine.cpp  ScriptEngine.h  ScriptEngineRegistry.cpp  ScriptEngineRegistry.h  ScriptEngineRegistryECS.cpp  ScriptEngineRegistryGLM.cpp  ScriptEngineRegistryRenderer.cpp  ScriptEngineRegistryTextures.cpp
Brigerad/src/Brigerad/Utils/: Serial.h  ranges.h
Brigerad/src/Brigerad/Utils/concepts/: any_of.h  constexpr_for.h  is_array_like.h  members_all_match.h
Brigerad/src/Brigerad/Utils/dialogs/: error.h  file.cpp  file.h  warning.h
Brigerad/src/Brigerad/Utils/logs/: log_rotating_sanitized_file_sink.h
Brigerad/src/Brigerad/Utils/serialization/: basic_serializer.h  is_serializable.h  serialize.h  serializer.h
Brigerad/src/Brigerad/Utils/types/: string_literal.h  wstring_to_utf8.cpp  wstring_to_utf8.h
Brigerad/src/Platform/Linux/: LinuxInput.cpp  LinuxTime.h  LinuxWindow.cpp  LinuxWindow.h
Brigerad/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFontAtlas.cpp  OpenGLFontAtlas.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Brigerad/src/Platform/Windows/: WindowsInput.cpp  WindowsTime.h  WindowsWindow.cpp  WindowsWindow.h
Brigerad/src/Platform/Windows/dialog/: error.cpp  warning.cpp
Frasy/: version.h
Frasy/demo_mode/: my_frasy_interpreter.cpp  premake5.lua.template
Frasy/demo_mode/layers/: my_main_application_layer.cpp  my_main_application_layer.h
Frasy/demo_mode/lua/: environment.lua
Frasy/lua/can_open/: can_open.lua  object_dictionary.lua  object_dictionnary.lua
Frasy/lua/cep/: daq.lua  ibs.lua  pio.lua  r8l.lua
Frasy/lua/core/: hash
Frasy/lua/framework/: context.lua  error_handler.lua  exception.lua  orchestrator.lua  order_requirement.lua  runtime_requirement.lua  scope.lua  scope_result.lua  sequence.lua  sort_utils.lua  stage.lua  sync_requirement.lua  test.lua
Frasy/lua/helper/: debug.lua  execute.lua  generate.lua  load_tests.lua  validate.lua
Frasy/lua/sdk/: log.lua  popup.lua  sync.lua  test.lua  testbench.lua
Frasy/lua/utils/: bitwise.lua  check_field.lua  equals.lua  ini_parser.lua  linesplit.lua  module.lua  pprint.lua  print.lua  timeout.lua  tostring.lua  traverse.lua
Frasy/src/: frasy_interpreter.cpp  frasy_interpreter.h
Frasy/src/assets/: asset_manager.h
Frasy/src/demo_mode/: frasy_interpreter.cpp  my_frasy_interpreter.cpp
Frasy/src/instrumentation_card/: command_description.h  command_value_type.h  info.h
Frasy/src/layers/: can_open_viewer.cpp  can_open_viewer.h  device_viewer.cpp  device_viewer.h  log_window.cpp  log_window.h  main_application_layer.cpp  main_application_layer.h  result_analyzer.cpp  result_analyzer.h  result_viewer.cpp  result_viewer.h  test_viewer.cpp  test_viewer.h  usb_tree_viewer.cpp  usb_tree_viewer.h
Frasy/src/utils/: UutState.h  concepts.h  (+12 more)
Tests/LuaDeserializer/: test.cpp
demo_mode/: config.json  demoDevice.eds  demoDevice.xdd  generate_hashes.bat  my_frasy_interpreter.cpp  premake5.lua  premake5.lua.template
demo_mode/layers/: my_main_application_layer.cpp  my_main_application_layer.h
demo_mode/lua/: environment.lua
demo_mode/src/: config.json  my_frasy_interpreter.cpp
doc/API/: readme.md
doc/architecture/: logical_pipeline.md  nouns.md  readme.md
doc/experiments/: context.txt  smartest_station.md
docs/source/: conf.py  index.rst  todo.rst
scripts/: copy_lua.py
scripts/Windows/: generate_clion.bat  generate_hashes.bat  generate_vs19.bat  generate_vs22.bat  refresh_dependencies.bat
(+458 files in other folders)
